--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"discord-graf": "^0.14.0",
 		"yargs": "^5.0.0",
 		"common-tags": "^1.3.0",
-		"ytdl-core": "^0.7.0"
+		"ytdl-core": "^0.7.0",
+		"simple-youtube-api": "^2.1.0"
 	},
 	"devDependencies": {
 		"gulp": "gulpjs/gulp#4.0",
